changes to immutable graph db txn, but perf issues remain